# AndroidDlibApp

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hzy/dlib/simple/app/: MainApplication.java
app/src/main/java/com/hzy/dlib/simple/app/activity/: DetectActivity.java  DetectBitmapActivity.java  DetectFileActivity.java  MainActivity.java
app/src/main/java/com/hzy/dlib/simple/app/consts/: RequestCode.java  RouterHub.java
app/src/main/java/com/hzy/dlib/simple/app/utils/: BitmapDrawUtils.java  DetectUtils.java  SpaceUtils.java
app/src/main/res/layout/: activity_detect.xml  activity_detect_bitmap.xml  activity_detect_file.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libdlib/: build.gradle
libdlib/src/main/: AndroidManifest.xml
libdlib/src/main/cpp/: CMakeLists.txt  dlibapi.cpp  dlibapi.h  ndklog.h
libdlib/src/main/cpp/detector/: FaceDetector.cpp  FaceDetector.h
libdlib/src/main/java/com/hzy/dlib/libdlib/: DLibApi.java  DLibDetector.java
libdlib/src/main/res/values/: strings.xml
